// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`big STEM tool render goldens (default state) > renders + pins a digest for appLab 1`] = `
{
  "buttons": 26,
  "inputs": 5,
  "lengthBucket": 66,
  "selects": 0,
  "sha": "f7902f58f1c9f45e",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for assessmentLiteracy 1`] = `
{
  "buttons": 10,
  "inputs": 0,
  "lengthBucket": 30,
  "selects": 0,
  "sha": "cb7f0729251badab",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for beehive 1`] = `
{
  "buttons": 64,
  "inputs": 4,
  "lengthBucket": 302,
  "selects": 0,
  "sha": "4eb3fafa5988a435",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for birdLab 1`] = `
{
  "buttons": 125,
  "inputs": 0,
  "lengthBucket": 697,
  "selects": 0,
  "sha": "9066120729f0b237",
  "svgs": 2,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for cephalopodLab 1`] = `
{
  "buttons": 17,
  "inputs": 0,
  "lengthBucket": 67,
  "selects": 0,
  "sha": "4052c22b2baaf110",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for learningLab 1`] = `
{
  "buttons": 134,
  "inputs": 0,
  "lengthBucket": 405,
  "selects": 0,
  "sha": "2c4503971780bf5c",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for nutritionLab 1`] = `
{
  "buttons": 15,
  "inputs": 0,
  "lengthBucket": 103,
  "selects": 0,
  "sha": "6dfd478711625e0b",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for plateTectonics 1`] = `
{
  "buttons": 22,
  "inputs": 5,
  "lengthBucket": 103,
  "selects": 0,
  "sha": "e845a7e557bfafc7",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for printingPress 1`] = `
{
  "buttons": 99,
  "inputs": 0,
  "lengthBucket": 594,
  "selects": 0,
  "sha": "4c6e62be3d03d161",
  "svgs": 2,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for raptorHunt 1`] = `
{
  "buttons": 48,
  "inputs": 1,
  "lengthBucket": 104,
  "selects": 0,
  "sha": "919fac6bdb79c07b",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for roadReady 1`] = `
{
  "buttons": 64,
  "inputs": 3,
  "lengthBucket": 202,
  "selects": 0,
  "sha": "c514429cd5b9dab8",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for solarSystem 1`] = `
{
  "buttons": 13,
  "inputs": 1,
  "lengthBucket": 38,
  "selects": 0,
  "sha": "a6d8272984d6c839",
  "svgs": 0,
}
`;
